# pointcloud_utils_msgs

./: CMakeLists.txt  package.xml
msg/: Correspondences.msg  Segment.msg
srv/: AttachObject.srv  FindPointCloudCorrespondence.srv  SimVisiblePointCloud.srv
